deployments/ambassador-operator-kind.yaml
---
# Source: generated by /Users/acook/release/ambassador-operator/ci/create_manifests.sh
apiVersion: v1
kind: Namespace
metadata:
  name: ambassador
---
# Source: ambassador-operator/templates/ambassador-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ambassador-operator
  namespace: ambassador
  labels:
    app.kubernetes.io/name: ambassador-operator
    app.kubernetes.io/part-of: ambassador
    helm.sh/chart: ambassador-operator-0.3.0
    app.kubernetes.io/instance: ambassador
    app.kubernetes.io/managed-by: Helm
    getambassador.io/installer: operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ambassador-operator
  template:
    metadata:
      labels:
        name: ambassador-operator
        app.kubernetes.io/name: ambassador-operator
        app.kubernetes.io/part-of: ambassador
        helm.sh/chart: ambassador-operator-0.3.0
        app.kubernetes.io/instance: ambassador
        app.kubernetes.io/managed-by: Helm
        getambassador.io/installer: operator
    spec:
      serviceAccountName: ambassador-operator
      containers:
        - name: ambassador-operator
          # Replace this with the built image name
          image: docker.io/datawire/ambassador-operator:v1.3.0
          command:
          - ambassador-operator
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: static-helm-values
              mountPath: /tmp/helm
      volumes:
        - name: static-helm-values
          configMap:
            name: static-helm-values
