deployments/kaniko.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kaniko
spec:

  hostAliases:
  - ip: "192.168.1.8"
    hostnames:
    - "registry.other.net"
  containers:

  # - name: cat-hosts
  #   image: busybox:1.28
  #   command:
  #   - cat
  #   args:
  #   - "/etc/hosts"

  - name: kaniko
    image: gcr.io/kaniko-project/executor:debug
    args: [
    "--insecure",
    "--skip-tls-verify",
    "--destination=registry.other.net:5000/test:bar",
    "--context=git://gitea-service.gitea-repo.svc.cluster.local:3000/mav/eval.git#refs/heads/main#8adc1aa2494ad4debba2dd795725223f251ff98a",
    "--dockerfile=dockerfile",
    ]
    volumeMounts:
      - name: data
        mountPath: /data
      - name: docker-config
        mountPath: /kaniko/.docker
  restartPolicy: Never
  volumes:
    - name: data
      hostPath:
        path: /data  # matches kind containerPath:
    - name: docker-config
      projected:
        sources:
          - secret:
              name: regcred
              items:
                - key: .dockerconfigjson
                  path: config.json
