deployments/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
spec:
  containers:
  - name: test
    image: localhost:5000/test:bar
    command: ["/app/test/runner_/runner"]
    # command: ["/bin/ls"]
    # args: ["-lR", "/app"]
#    command: ["/app/test"]
    imagePullPolicy: Always
  restartPolicy: Never
