deployments/wrapper.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wrapper
spec:
  containers:
  - name: wrapper
    image: localhost:5000/eval:9ef4d4e0-f541-4e07-bef9-4824cd84c5ce
    command: ["/app/actions/wrapper/wrapper_/wrapper"]
    # command: ["/bin/ls"]
    # args: ["-lR", "/app"]
#    command: ["/app/test"]
    imagePullPolicy: Always
  restartPolicy: Never
